# ohjelmistotuotanto-miniprojekti

./: .pylintrc  README.md  pyproject.toml  tasks.py  test.py
.github/workflows/: main.yml
src/: main.py
src/core/: types.py
src/gui/: main_window.py
src/gui/components/: mainwindow.py  mainwindow.ui
src/gui/models/: tip_model.py
src/tests/: task_test.py  test_app.py
src/ui/: tui.py
src/ui/components/: scrollable_area.py  text_edit.py
