[tool.poetry]
name = "ot-mini-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.6"
invoke = "^1.6.0"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"
autopep8 = "^1.6.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
